# imganalyzer

./: .env.example  .gitignore  0.47.0  AGENTS.md  ARCHITECTURE.md  DB_improvement.md  PIPELINE_ARCHITECTURE.md  README.md  decode_backfill.err  object_detection_research.md  perf_claude_sonnet_4.6.md  perf_clause_codex5.2.md  perf_clause_opus_4.6.md  perf_plan.md  pyproject.toml  pytest.ini  scheduler_design.md  spec.md  status.md  timeline_design_research.md  todo.md
.github/: copilot-instructions.md
imganalyzer/: analyzer.py  cli.py  device.py  server.py
imganalyzer-app/: electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json
imganalyzer-app/e2e/: fake-json-rpc-server.cjs  ui-smoke.spec.ts
imganalyzer/analysis/: aesthetic.py  geocode_resolver.py  metadata.py  perception.py  technical.py
imganalyzer/cache/: __init__.py  decoded_store.py  pre_decode.py
imganalyzer/db/: __init__.py  connection.py  geohash.py  queue.py  repository.py  schema.py  search.py
model-eval/: caption_eval_results.json  keyword_prompt_sweep_qwen35_4b.json  keyword_prompt_validation_qwen35_9b.json  keywords_actual_copilot_qwen35.csv  pyproject.toml  report_caption_combined.html  report_caption_copilot_qwen3_qwen35.html  report_copilot_vs_qwen35_9b_table.html  report_keywords_copilot_qwen35.html  report_qwen3vl_2b_4b.html  report_resolution_comparison.html
model-eval/model_eval/: __init__.py  cache.py  cli.py  config.py  runner.py
model-eval/model_eval/models/: __init__.py  base.py
model-eval/model_eval/models/aesthetic/: __init__.py  artimuse.py  clip_mlp.py  pyiqa_suite.py  q_align.py  siglip_v25.py  unipercept.py
model-eval/model_eval/models/caption/: __init__.py  blip2.py  copilot.py  florence2.py  gemma3.py  gpt4o.py  internvl.py  joycaption.py  minicpm_v.py  molmo.py  ollama_generic.py  qwen3_vl.py  qwen3_vl_quant.py
model-eval/model_eval/report/: __init__.py  html_report.py
model-eval/model_eval/report/templates/: report.html.j2
model-eval/tests/: test_cache.py
scripts/: _diag.py  _fix_diag.py  check_aesthetic_model.py  check_coverage.py  check_desc_quality.py  debug_search.py  diagnose_sunset2.py  find_worker_reprocess.py  requeue_metadata.py  run_caption_eval.py  run_compare_copilot_qwen35.py  run_keyword_eval.py  run_resolution_eval.py  setup_worker_env.ps1  setup_worker_env.sh  test_blip2_vqa.py  test_fixes.py  test_sunset_search.py
tests/: test_adaptive_backoff.py  test_db_connection.py  test_decoded_integration.py  test_decoded_store.py  test_distributed_worker.py  test_geo_features.py  test_geocode_cache.py  test_imganalyzer.py  test_module_registry.py  test_pre_decode.py  test_queue_regressions.py  test_readers.py  test_readers_heif_init.py  test_rpc_backend_seams.py  test_scheduler.py  test_server_decode_enqueue_missing.py  test_server_gallery.py  test_server_rpc_backpressure.py  test_server_search_engine_cache.py  test_server_search_pagination.py  test_server_thumbnail_batch.py  test_storyline.py  test_unified_scheduler.py  test_worker_controls.py
(+108 files in other folders)
